--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am full stack software developer. A fast learning and analytical problem solver with a passion for backend development.</p> 
       <h1>Where I'm From</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
